@@ -1,0 +1,8 @@
+# ur_rtde package recipe
+name="ur_rtde"
+version="1.5.8"
+description="C++ interface with Python bindings for Universal Robots RTDE (Real-Time Data Exchange)"
+build_type="custom"
+install_method="custom"
+dependencies=""
+
